# midi-commander-custom

./: .gitignore  .project  HardwareNotes.txt  README.md  ozone.jdebug
MIDI_Commander_Custom/: .cproject  .gitignore  CMakeCache.txt  CMakeLists.txt  MIDI_Commander_Custom Debug.launch  MIDI_Commander_Custom.ioc  README.md  STM32F103RETX_FLASH.ld  arm-gcc-toolchain.cmake  cmake_install.cmake
MIDI_Commander_Custom/Core/Inc/: app.h  buttons.h  crc.h  display.h  draw.h  event.h  fifo.h  flash_storage.h  hal_flash_wrapper.h  leds.h  main.h  menu_modifier.h  midi.h  preset.h  scheduler.h  settings.h  settings_types.h  ssd1306_conf.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  system_state.h  uart.h
MIDI_Commander_Custom/Core/Src/: app.c  buttons.c  crc.c  display.c  draw.c  event.c  fifo.c  flash_storage.c  hal_flash_wrapper.c  leds.c  logging.c  main.c  menu_modifier.c  midi.c  preset.c  scheduler.c  settings.c  settings_factory.c  settings_factory.h  stm32f1xx_it.c  system_state.c  system_stm32f1xx.c  uart.c
MIDI_Commander_Custom/Core/interfaces/: logging.h
MIDI_Commander_Custom/Drivers/Config/: SEGGER_RTT_Conf.h
MIDI_Commander_Custom/Drivers/RTT/: SEGGER_RTT.h
MIDI_Commander_Custom/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_flash_ex.c  stm32f1xx_hal_i2c.c
MIDI_Commander_Custom/Drivers/Syscalls/: SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
MIDI_Commander_Custom/Drivers/file_system/: file_system.c  file_system.h  flash_storage.c  flash_storage.h  hal_flash_wrapper.c  hal_flash_wrapper.h
MIDI_Commander_Custom/Middlewares/draw/: draw.c  draw.h
MIDI_Commander_Custom/Middlewares/draw/fonts/: README.md  bmfont2c.cfg  bmfont2c.py  fontlibrary.c  fontlibrary.h  robot10.fnt  robot56.fnt
MIDI_Commander_Custom/Middlewares/ssd1306/: fontlibrary.c  fontlibrary.h  ssd1306.c  ssd1306.h
MIDI_Commander_Custom/USB_DEVICE/App/: usbd_midi_if.c
docs/: MODES.md
python/: menu_generator.py  settings_meny.yaml
python/templates/: factory_settings.jinja
